# factory2d

./: .gitignore  CMakeLists.txt  LICENSE.mb  README.md  factory2d.sln
core/: Asset.cpp  Asset.h  Color.cpp  Debug.cpp  Debug.h  Factory2D.h  Game.cpp  Game.h  GameTime.cpp  GameTime.h  Makefile  Math.h  Object.cpp  Object.h  Properties.h  Quadtree.cpp  Quadtree.h  Renderer.cpp  Renderer.h  Serializable.cpp  Serializable.h  Transform.cpp  Transform.h  Window.cpp  Window.h  core.vcxproj  core.vcxproj.filters  gl.h
core/Asset/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Picture.cpp  Picture.h  PictureAsset.cpp  PictureAsset.h
core/AssetManager/: AssetManager.cpp  AssetManager.h  Picture.cpp  Picture.h
core/Behavior/: Behaviour.h  BehaviourObject.cpp  BehaviourObject.h  CameraBehaviour.cpp  CameraBehaviour.h  SpriteBehaviour.cpp  SpriteBehaviour.h  TweenBehaviour.cpp  TweenBehaviour.h
core/Behaviour/: Behaviour.cpp  CameraBehaviour.h  SpriteBehaviour.cpp  SpriteBehaviour.h  TweenBehaviour.cpp
core/FactoryObjects/: CameraObject.cpp  CameraObject.h  FactoryObject.cpp  FactoryObject.h  SceneObject.cpp  SceneObject.h  SpriteObject.cpp  SpriteObject.h  Texture2D.cpp  Texture2D.h  TextureObject.cpp  TextureObject.h
core/Input/: Action.cpp  Action.h  ActionObject.cpp  ActionObject.h  AxisAction.cpp  AxisAction.h  AxisObject.cpp  AxisObject.h  ButtonAction.cpp  ButtonAction.h  ButtonObject.cpp  ButtonObject.h  Controller.cpp  Controller.h  ControllerObject.cpp  ControllerObject.h  InputManager.cpp  Trigger.cpp  (+12 more)
game/: CMakeLists.txt  MyGame.cpp  MyGame.h  game.vcxproj  game.vcxproj.filters  main.cpp
spaceinvaders/: CMakeLists.txt  MyGame.cpp  MyGame.h  main.cpp  spaceinvaders.vcxproj  spaceinvaders.vcxproj.filters
spaceinvaders/Scenes/: GameScene.cpp  GameScene.h  TitleScene.cpp  TitleScene.h
(+48 files in other folders)
